fixed about page spacing on desktop

--- a/css/about.css
+++ b/css/about.css
@@ -827,7 +827,7 @@ body.dark-mode {
     <--- -------------------------- -*/
 
     #our-story {
-        padding-top: 0px;
+        padding-top: 100px;
         padding-bottom: 100px;
     }
 
